tests/ui/integer_bad_allowed_values.stderr
error: expected `all`
 --> tests/ui/integer_bad_allowed_values.rs:4:18
  |
4 | #[allowed_values(typo)]
  |                  ^^^^
